--- a/src/index.html
+++ b/src/index.html
@@ -16,10 +16,8 @@
         <base href="/">
 
         <!-- Favicon -->
-        <link
-            rel="icon"
-            type="image/png"
-            href="favicon.png">
+        <link rel="icon" type="image/svg+xml" href="assets/images/logo_favicon.png">
+
         <!-- Fonts -->
         <link
             href="assets/fonts/inter/inter.css"
@@ -48,8 +46,8 @@
 
         <!-- Splash screen -->
         <fuse-splash-screen>
-            <img class="w-40"
-                src="assets/images/logo/logo.png"
+            <img class="w-40 mb-4"
+                src="assets/images/logo.svg"
                 alt="DPM logo">
             <div class="spinner">
                 <div class="bounce1"></div>
