--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,7 @@
             name="viewport"
             content="width=device-width, height=device-height, initial-scale=1.0, minimum-scale=1.0">
 
-        <base href="/">
+        <base href="/admin/">
 
         <!-- Favicon -->
         <link rel="icon" type="image/svg+xml" href="assets/images/logo_favicon.png">
